--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
             <!--HEADER-->
             <header class="row justify-content-center header ">
-                <img id="weatherIcon" class="col-0.7 pull-right img-responsive " src="" alt="weather"/>
+                <img id="weatherIcon" class="col-0.7 pull-right img-responsive " src="https://raw.githubusercontent.com/JohannaXX/MyImages/master/images/WeatherIconWhite.png" alt="weather"/>
                 <h1 class="col-2.5 text-left pageTitle">Weather at destination</h1>
             </header>
 
